Fix Flashes too large on mobile

--- a/app/assets/stylesheets/components/alerts.sass
+++ b/app/assets/stylesheets/components/alerts.sass
@@ -20,6 +20,7 @@
   width: 400px
   border-radius: 0
   z-index: 1000
+  max-width: calc(100% - 40px)
 
 .alert-dismissible
   .close
